--- a/main.css
+++ b/main.css
@@ -1,3 +1,58 @@
 * {
-    border: 1px solid red !important;
+    //border: 1px solid red !important;
+}
+
+.container {
+  padding: 20px;
+  margin-top: 40px;
+  background-color: rgba(213,248,255,1);
+  border: 12px solid rgba(85,85,210,1);
+  border-radius: 50px;
+  padding: 20px;
+  max-width: 800px;
+}
+
+body {
+  background: rgb(85,85,210);
+  background: radial-gradient(circle, rgba(85,85,210,1) 0%, rgba(213,248,255,1) 56%, rgba(255,191,191,1) 85%);
+}
+
+div {
+  padding: 20px;
+}
+
+h1, h2, p, label, input {
+  margin: 0 auto;
+  text-align: center;
+  font-family: 'Josefin Sans', sans-serif;
+  text-shadow: 2px 2px 16px rgba(85,85,210,1);
+}
+
+p, label, input {
+  font-size: 2em;
+}
+
+p {
+  font-style: italic;
+}
+
+.guessSubmit, .guessField {
+  width: 250px;
+  height: 50px;
+  background-color: rgba(255,191,191,1);
+  border: 4px solid rgba(85,85,210,1);
+  border-radius: 50px;
+}
+
+#guessField {
+  font-size: 2em;
+}
+
+.guessSubmit {
+  font-size: 1em;
+  max-width: 80px;
+}
+
+#inputs {
+  text-align: center;
 }
