--- a/main.css
+++ b/main.css
@@ -21,11 +21,12 @@ div {
   padding: 20px;
 }
 
-h1, h2, p, label, input {
+h1, h2, h3, label, p {
   margin: 0 auto;
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
-  text-shadow: 2px 2px 16px rgba(85,85,210,1);
+  text-shadow: 2px 2px 16px rgba(255,191,191,1);
+  color: rgba(85,85,210,1);
 }
 
 p, label, input {
@@ -38,7 +39,7 @@ p {
 
 .guessSubmit, .guessField {
   width: 250px;
-  height: 50px;
+  height: 75px;
   background-color: rgba(255,191,191,1);
   border: 4px solid rgba(85,85,210,1);
   border-radius: 50px;
@@ -46,13 +47,20 @@ p {
 
 #guessField {
   font-size: 2em;
+  text-align: center;
+  color: rgba(85,85,210,1);
 }
 
 .guessSubmit {
-  font-size: 1em;
+  font-size: 20px;
   max-width: 80px;
+  color: rgba(85,85,210,1);
 }
 
 #inputs {
   text-align: center;
+}
+
+#guesses, #guess_status {
+  text-shadow: 2px 2px 16px rgba(255,191,191,1);
 }
