--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 * {
-    //border: 1px solid red !important;
+    border: 1px solid red !important;
 }
 
 .container {
@@ -21,7 +21,7 @@ div {
   padding: 20px;
 }
 
-h1, h2, h3, label, p {
+h1, h2, h3, label, p, button {
   margin: 0 auto;
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
@@ -37,7 +37,7 @@ p {
   font-style: italic;
 }
 
-.guessSubmit, .guessField {
+.guessSubmit, .guessField, button {
   width: 250px;
   height: 75px;
   background-color: rgba(255,191,191,1);
