--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 * {
-    //border: 1px solid red !important;
+    border: 1px solid red !important;
 }
 
 .container {
@@ -38,7 +38,7 @@ p {
 }
 
 .guessSubmit, .guessField, button {
-  width: 250px;
+  width: 200px;
   height: 75px;
   background-color: rgba(255,191,191,1);
   border: 4px solid rgba(85,85,210,1);
